tests/paczka1/fuzzy1/33372135.err
Error in line 13: hZikpyHNR S972 77,1
Error in line 22: hZikpyHNR S888 58,2
Error in line 15: ZCY53jECC S972 9,8
Error in line 20: ziM4vAI S888 143,2
